added html for riding plan

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="./style/logIn.css">
     <link rel="stylesheet" href="./style/loading.css">
     <link rel="stylesheet" href="./style/children.css">
+    <link rel="stylesheet" href="./style/ridingplan.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato&display=swap">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
@@ -26,7 +27,7 @@
         <ul>
             <li id="childrenNav">Kinder</li>
             <li id="roomPlaningNav">Zimmer Einteilung</li>
-            <li>Reitplan</li>
+            <li id="ridingPlanNav">Reitplan</li>
             <li>Feedbackfragebögen</li>
             <li>Account</li>
         </ul>
@@ -73,11 +74,17 @@
 
         <div id="childrenRidingPlanScreen">
             <h2>hier wird der Reitplan des ausgewählten kindes ansehbar sein</h2>
+
+            <button id="back">back</button>
         </div>
 
         <div id="roomPlaningScreen"></div>
 
         <div id="roomsScreen"></div>
+
+        <div id="ridingPlan"></div>
+
+        <div id="detailedRidingPlan"></div>
     </div>
 </body>
 </html>
