add class hide to menu and change font awesome link

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -8,11 +8,12 @@
     <link rel="stylesheet" href="menu.css">
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="logIn.css">
+    <link rel="stylesheet" href="children.css">
     <link rel="stylesheet" href="loading.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato&display=swap">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <script src="https://kit.fontawesome.com/e7df220bd7.js" crossorigin="anonymous"></script>
     <script src="menu.js"></script>
     <script src="script.js"></script>
 </head>
@@ -34,7 +35,7 @@
     </nav>
 
     <header>
-        <div id="menu">
+        <div id="menu" class="hide">
             <div class="bar" id="barOne"></div>
             <div class="bar" id="barTwo"></div>
             <div class="bar" id="barThree"></div>
