add children search html

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -71,7 +71,14 @@
 
         <div id="weekScreen" class="hide"></div>
 
-        <div id="childrenScreen" class="hide"></div>
+        <div id="childrenScreen" class="hide">
+            <div id="childrenSearchBar">
+                <input type="search" id="childrenSearchInput">
+                <i class="fas fa-search" id="childrenSearchBtn"></i>
+            </div>
+
+            <div id="childrenWrapper"></div>
+        </div>
     </div>
 </body>
 </html>
