add saveChildButton button style & html

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -146,6 +146,8 @@
                     <label>Allergene</label>
                     <input type='text' id='allergens' placeholder='Allergene'>
                 </div>
+
+                <div id="saveChildButton">Speichern</div>
             </div>
         </div>
     </div>
